python-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
        name: python
        image: 
        ports:
        - containerPort: 5000
