angular-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: angular
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: 715146130151.dkr.ecr.us-east-1.amazonaws.com/microservices:angular
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-svc
  namespace: ingress-nginx
  labels:
spec:
  ports:
  - port: 5000
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: angular
