spring-deployment.yaml


apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spring
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name: spring
        image: 715146130151.dkr.ecr.us-east-1.amazonaws.com/microservices:spring
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-svc
  namespace: ingress-nginx
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: spring
