newingress.yaml

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: coffee
  namespace: ingress-nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  tls:
  - secretName: cafe-secret
  rules:
  - http:
      paths:
      - path: "/?(.*)"
        backend:
          serviceName: angular-svc
          servicePort: 80
      - path: "/t/?(.*)"
        backend:
          serviceName: spring-svc
          servicePort: 80
